--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -10,8 +9,9 @@ body {
     scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
-  }
-  
+    background-color: #6161611c;
+    font-family: 'Roboto', sans-serif;
+}
 
 
 .container {
@@ -23,62 +23,84 @@ body {
     margin: 0 auto;
 }
 
-.form_wrapper {
-    border-radius: 10px;
-    width: 100%;
-    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.23);
-}
-
+/* ===Form=== */
 .form {
     display: flex;
     position: relative;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 10px;
+    width: 420px;
+    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.23);
     flex-direction: column;
     padding: 24px;
+    margin: 0 auto;
+    background-color: rgb(255, 255, 255);
+    height: auto;
 }
 
 .form legend {
     font-size: 28px;
     color: rgba(0, 0, 0, 0.781);
     width: max-content;
+    font-weight: 500;
 }
 
 
-/* Inputs */
-
-.input_wrapper{
+/* ===Inputs=== */
+.input_wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    width: 90%;
+    min-height: 100px;
 }
 
-.input_wrapper .input{
-    max-width: 300px;
+
+
+.form_input {
+    width: 100%;
     height: 30px;
-    padding: 0 5px;
+    padding: 0 7px;
+    outline: none;
+    background-color: #fdfdfdde;
+    border: 1px solid #616161;
+    border-radius: 5px;
+    transition: border .1s linear;
 }
 
-.helper_text{
+.form_input:focus {
+    box-shadow: 0 0 4px #2460ffab;
+}
+
+
+.invalidStyle {
+    box-shadow: 0 0 4px #b00020;
+}
+
+.invalidStyle:focus {
+    box-shadow: 0 0 4px #b00020;
+}
+
+/* ===Helper text=== */
+.helper_text {
+    position: absolute;
+    bottom: -18px;
+    height: 40px;
     font-size: 13px;
     color: rgb(66, 66, 66);
+    font-weight: 300;
+    padding-left: 5px;
 }
 
-.error_text{
+.error_text {
     font-size: 13px;
-    color: rgb(211, 12, 12);
-}
-.error_text2{
-    font-size: 13px;
-    color: rgb(211, 12, 12);
+    color: #b00020;
 }
 
 
-
-
-/* Button */
-.btn_wrapper {
-    display: flex;
-    justify-content: center;
-}
-
+/* ===Button=== */
 .form_btn {
     width: min-content;
     cursor: pointer;
@@ -88,9 +110,10 @@ body {
     border: 2px rgb(226, 102, 70) solid;
     border-radius: 5px;
     color: rgb(226, 102, 70);
+    margin-top: 20px;
 }
 
-.form_btn:disabled{
+.form_btn:disabled {
     background-color: grey;
     color: grey;
     cursor: default;
@@ -104,4 +127,45 @@ body {
 
 .form_btn:active {
     background-color: rgba(226, 102, 0, 0.185);
+}
+
+
+/* ===Form message=== */
+
+.form_message_container {
+    display: none;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    left: 5px;
+    height: auto;
+    border-radius: 10px;
+    background-color: #cafdca;
+    padding: 10px;
+    -webkit-box-shadow: -2px 4px 11px 6px rgba(0, 0, 0, 0.13);
+    box-shadow: -2px 4px 11px 6px rgba(0, 0, 0, 0.13);
+    z-index: 10;
+}
+
+.form_message {
+    padding-right: 50px;
+    overflow: hidden;
+}
+
+.form_message__btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 48px;
+    height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: background-color 0.1s linear;
+}
+
+.form_message__btn:hover {
+    background-color: #00000011;
 }
