--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,9 @@
 
 body {
     min-height: 100vh;
-    scroll-behavior: smooth;
     text-rendering: optimizeSpeed;
     line-height: 1.5;
-    background-color: #6161611c;
+    background-color: rgba(97, 97, 97, 0.11);
     font-family: 'Roboto', sans-serif;
 }
 
@@ -21,6 +20,7 @@ body {
     height: 100vh;
     padding: 0 24px;
     margin: 0 auto;
+    position: relative;
 }
 
 /* ===Form=== */
@@ -48,7 +48,7 @@ body {
 
 
 /* ===Inputs=== */
-.input_wrapper {
+.form__input-wrapper {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -57,21 +57,24 @@ body {
     min-height: 100px;
 }
 
+.form__input-wrapper label {
+    font-weight: 400;
+}
 
 
-.form_input {
+.form__input {
     width: 100%;
     height: 30px;
     padding: 0 7px;
     outline: none;
-    background-color: #fdfdfdde;
-    border: 1px solid #616161;
+    background-color: rgba(253, 253, 253, 0.871);
+    border: 1px solid rgb(97, 97, 97);
     border-radius: 5px;
     transition: border .1s linear;
 }
 
-.form_input:focus {
-    box-shadow: 0 0 4px #2460ffab;
+.form__input:focus {
+    box-shadow: 0 0 4px rgba(36, 96, 255, 0.671);
 }
 
 
@@ -84,7 +87,7 @@ body {
 }
 
 /* ===Helper text=== */
-.helper_text {
+.form__helper-text {
     position: absolute;
     bottom: -18px;
     height: 40px;
@@ -94,14 +97,14 @@ body {
     padding-left: 5px;
 }
 
-.error_text {
+.form__error_text {
     font-size: 13px;
     color: #b00020;
 }
 
 
 /* ===Button=== */
-.form_btn {
+.form__submit-btn {
     width: min-content;
     cursor: pointer;
     padding: 5px 30px;
@@ -113,46 +116,50 @@ body {
     margin-top: 20px;
 }
 
-.form_btn:disabled {
-    background-color: grey;
-    color: grey;
+.form__submit-btn:disabled {
+    background-color: rgb(128, 128, 128);
+    color: rgb(128, 128, 128);
     cursor: default;
     text-decoration: none;
     pointer-events: none;
 }
 
-.form_btn:hover {
+.form__submit-btn:hover {
     background-color: rgba(226, 102, 0, 0.048);
 }
 
-.form_btn:active {
+.form__submit-btn:active {
     background-color: rgba(226, 102, 0, 0.185);
 }
 
 
-/* ===Form message=== */
+/* ===Allert message=== */
 
-.form_message_container {
+.allert {
     display: none;
     position: absolute;
-    top: 5px;
-    right: 5px;
-    left: 5px;
+    top: 24px;
+    right: 24px;
+    left: 24px;
     height: auto;
     border-radius: 10px;
-    background-color: #cafdca;
+    background-color: rgb(202, 253, 202);
     padding: 10px;
     -webkit-box-shadow: -2px 4px 11px 6px rgba(0, 0, 0, 0.13);
     box-shadow: -2px 4px 11px 6px rgba(0, 0, 0, 0.13);
     z-index: 10;
 }
 
-.form_message {
+.allert_show {
+    display: flex;
+}
+
+.allert__message {
     padding-right: 50px;
     overflow: hidden;
 }
 
-.form_message__btn {
+.allert__btn {
     position: absolute;
     top: 0;
     right: 0;
@@ -166,6 +173,6 @@ body {
     transition: background-color 0.1s linear;
 }
 
-.form_message__btn:hover {
-    background-color: #00000011;
+.allert__btn:hover {
+    background-color: rgba(0, 0, 0, 0.067);
 }
