--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,14 @@ body {
 
 .container {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    max-width: 900px;
-    height: 100vh;
-    padding: 0 24px;
+    max-width: 480px;
+    padding: 24px;
     margin: 0 auto;
     position: relative;
 }
+
 
 /* ===Form=== */
 .form {
@@ -30,7 +31,7 @@ body {
     align-items: center;
     justify-content: space-between;
     border-radius: 10px;
-    width: 420px;
+    width: 100%;
     box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.23);
     flex-direction: column;
     padding: 24px;
@@ -77,6 +78,34 @@ body {
     box-shadow: 0 0 4px rgba(36, 96, 255, 0.671);
 }
 
+
+
+/* form__textarea-message */
+
+.form__textarea {
+    width: 100%;
+    margin-bottom: 27px;
+}
+
+.form__textarea-message {
+    max-width: 100%;
+    min-width: 100%;
+    min-height: 91px;
+    padding: 7px;
+    outline: none;
+    background-color: rgba(253, 253, 253, 0.871);
+    border: 1px solid rgb(97, 97, 97);
+    border-radius: 5px;
+    transition: border .1s linear;
+}
+
+.form__textarea-message:focus {
+    box-shadow: 0 0 4px rgba(36, 96, 255, 0.671);
+}
+
+.form__textarea span {
+    bottom: -41px;
+}
 
 .invalidStyle {
     box-shadow: 0 0 4px #b00020;
@@ -175,4 +204,130 @@ body {
 
 .allert__btn:hover {
     background-color: rgba(0, 0, 0, 0.067);
+}
+
+
+
+/* Switch */
+.form__disable-front-validation {
+    display: flex;
+    width: 90%;
+}
+
+.form__disable-front-validation p {
+    padding-right: 10px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 24px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: rgb(255, 255, 255);
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50px;
+}
+
+input:checked+.slider {
+    background-color: #08aa23;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #08aa23;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+/* form__select-station */
+.form__select-station_item {
+    width: 100%;
+    height: 30px;
+    padding: 0 7px;
+    outline: none;
+    background-color: rgba(253, 253, 253, 0.871);
+    border: 1px solid rgb(97, 97, 97);
+    border-radius: 5px;
+    transition: border .1s linear;
+    cursor: pointer;
+}
+
+
+/* form__menu_item-wrepper */
+.form__menu {
+    margin-bottom: 20px;
+}
+
+.form__menu_item-wrepper label {
+    cursor: pointer;
+}
+
+.form__menu_item-wrepper input {
+    cursor: pointer;
+    padding-right: 10px;
+}
+
+.form__helper-text_error-menu {
+    bottom: -23px;
+}
+
+/* get__users-btn */
+.get__users-btn {
+    padding: 15px;
+    cursor: pointer;
+}
+
+.get__users-btn:hover {
+    color: blue;
+}
+
+/* form__is-car_item-wrepper */
+
+.form__is-car_item-wrepper label {
+    cursor: pointer;
+}
+
+.form__is-car_item-wrepper input {
+    cursor: pointer;
 }
