--- a/css/style.css
+++ b/css/style.css
@@ -184,8 +184,15 @@ body {
 }
 
 .allert__message {
-    padding-right: 50px;
+    width: 100%;
     overflow: hidden;
+}
+.allert__message_title{
+    text-align: center;
+    width: 100%;
+    font-size: 18px;
+    color: #08aa23;
+    margin: 0 auto;
 }
 
 .allert__btn {
@@ -314,7 +321,7 @@ input:checked+.slider:before {
 
 /* get__users-btn */
 .get__users-btn {
-    padding: 15px;
+    margin-top: 15px;
     cursor: pointer;
 }
 
@@ -331,3 +338,21 @@ input:checked+.slider:before {
 .form__is-car_item-wrepper input {
     cursor: pointer;
 }
+
+/* Show users */
+.users-card{
+    background-color: rgb(245, 245, 245);
+    border-radius: 5px;
+    margin: 16px 0;
+    padding: 16px;
+    box-shadow: 0px 6px 12px -5px rgb(0 0 0 / 28%);
+}
+
+.get__users-btn::after{
+    content: '\25BC';
+}
+
+.toggle-show-user-btn::after{
+    content: '\25B2';
+}
+
